# my-scripts

./: LICENSE  my-pandoc-scripts.cabal  my-scripts.cabal  scripts.cabal  stack.yaml
app/: dot-preview.hs  mpandoc.hs  my-pandoc.hs  panpdf.hs  panword.hs
