name:                my-scripts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bibaijin/my-scripts#readme
license:             BSD3
license-file:        LICENSE
author:              bibaijin
maintainer:          bibaijin@gmail.com
copyright:           Copyright: (c) 2016 Bibai Jin
category:            Universal
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.1
                     , directory >= 1.2
                     , filepath >= 1.4
                     , shelly >= 1.6.3
                     , optparse-applicative >= 0.11
                     , pandoc >= 1.15
                     , pandoc-crossref >= 0.1
                     , pandoc-citeproc >= 0.7
  default-language:    Haskell2010

executable my-scripts-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-scripts
  default-language:    Haskell2010

executable panpdf
  hs-source-dirs:      app
  main-is:             panpdf.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , directory
                     , filepath
                     , optparse-applicative
                     , shelly
                     , my-scripts
  default-language:    Haskell2010

executable panword
  hs-source-dirs:      app
  main-is:             panword.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , directory
                     , filepath
                     , optparse-applicative
                     , shelly
                     , my-scripts
  default-language:    Haskell2010

test-suite my-scripts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my-scripts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bibaijin/my-scripts
