name:                scripts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bibaijin/scripts#readme
license:             BSD3
license-file:        LICENSE
author:              bibaijin
maintainer:          bibaijin@gmail.com
copyright:           Copyright: (c) 2017 Bibai Jin
category:            Universal
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable my-pandoc
  hs-source-dirs:      app
  main-is:             my-pandoc.hs
  build-depends:       base
                     , pandoc >= 1.19
                     , containers >= 0.5
                     , optparse-applicative >= 0.13
                     -- , blaze-html >= 0.8
                     , scripts
  default-language:    Haskell2010

executable dot-preview
  hs-source-dirs:      app
  main-is:             dot-preview.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text >= 1.2
                     , optparse-applicative >= 0.13
                     , shelly >= 1.6
                     , scripts
  default-language:    Haskell2010

test-suite scripts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scripts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bibaijin/scripts
